<resources>
    <string name="app_name">ContactList</string>
    <string name="action_settings">Settings</string>
    <string name="new_contact">New Contact</string>
    <string name="title_activity_contact_info">contactInfo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="birth_date">Birth date</string>
    <string name="date_met">Date met</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="phone">Phone Number XXX XXX XXXX</string>
    <string name="change">change</string>
    <string name="change2">change</string>
    <string name="back">Back</string>
    <string name="date_met_mm_dd_yyyy">Date Met MM/DD/YYYY</string>
    <string name="dob_mm_dd_yyyy">DOB MM/DD/YYYY</string>
    <string name="importContacts">Import Contacts</string>
    <string name="reintContacts">Reinitialize Contacts</string>
    <string name="zip">Zip</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="map_address">Map Address</string>
    <string name="map_activity">map activity</string>
</resources>
