<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactInfo"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_contact_info">


    <EditText
        android:id="@+id/fname"
        android:layout_width="374dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:maxLength="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="374dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@+id/fname"
        app:layout_constraintStart_toStartOf="@+id/fname"
        app:layout_constraintTop_toBottomOf="@id/fname" />

    <EditText
        android:id="@+id/pnum"
        android:layout_width="374dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="@+id/lname"
        app:layout_constraintTop_toBottomOf="@+id/lname" />

    <TextView
        android:id="@+id/bDay"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/dob_mm_dd_yyyy"
        android:inputType="date"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/pnum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pnum"
        app:layout_constraintTop_toBottomOf="@id/pnum" />

    <TextView
        android:id="@+id/dateMet"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/date_met_mm_dd_yyyy"
        android:inputType="date"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/bDay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bDay"
        app:layout_constraintTop_toBottomOf="@id/bDay" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="saveOrDelete"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:onClick="saveOrDelete"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/saveBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateMet"
        app:layout_constraintTop_toTopOf="@id/saveBtn" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backToContactListView"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/DOBBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="20dp"
        android:onClick="DOBChange"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bDay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dateMetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="dateMetChange"
        android:layout_marginEnd="20dp"
        android:text="@string/change2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateMet"
        app:layout_constraintTop_toBottomOf="@+id/DOBBtn" />

    <EditText
        android:id="@+id/Address1"
        android:layout_width="373dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:hint="@string/address_1"
        app:layout_constraintEnd_toEndOf="@+id/dateMetBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dateMet"
        app:layout_constraintTop_toBottomOf="@+id/dateMet" />

    <EditText
        android:id="@+id/Address2"
        android:layout_width="374dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:hint="@string/address_2"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@+id/dateMetBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dateMet"
        app:layout_constraintTop_toBottomOf="@+id/Address1" />

    <EditText
        android:id="@+id/City"
        android:layout_width="373dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:hint="@string/city"
        android:maxLength="25"
        app:layout_constraintStart_toStartOf="@+id/Address2"
        app:layout_constraintTop_toBottomOf="@+id/Address2" />

    <EditText
        android:id="@+id/State"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginTop="72dp"
        android:hint="@string/state"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="@+id/City"
        app:layout_constraintTop_toBottomOf="@+id/Address2" />

    <EditText
        android:id="@+id/Zip"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:hint="@string/zip"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintStart_toEndOf="@+id/State"
        app:layout_constraintTop_toBottomOf="@+id/City" />

    <Button
        android:id="@+id/mapAddr"
        android:layout_width="91dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:onClick="mapAddress"
        android:text="Map Address"
        app:layout_constraintLeft_toRightOf="@id/Zip"
        app:layout_constraintStart_toEndOf="@+id/Zip"
        app:layout_constraintTop_toBottomOf="@id/City" />

</androidx.constraintlayout.widget.ConstraintLayout>